# GEO1101_Synthesis_Project

./: .dockerignore  .gcloudignore  .gitignore  Dockerfile  Image_matching_validation_sheet.xlsx  README.md  benchmark.py  image_matching.py  makefile  pyproject.toml  requirements.txt  training.py
.github/workflows/: build.yaml  deploy.yaml
API/: CNN.py  const.py  coordinate.py  get_room_name.py  image.py  main.py  requirements.txt  routing.py  training.py
API/data/: floorplan.geojson  nodes.geojson  slam_coordinates.csv
GEO1101_Synthesis_Project_git/code/: const.py  module_matching_local.py  training.py
GEO1101_Synthesis_Project_git/code/API_dont_need/: Untitled-1.py  localisation.py  matching_and_localing.py
code/: _setup_database.py  benchmark.py  const.py  convertcoordinate.py  coordinate.ipynb  coordinate.py  cubemap_image_projection.py  extra_diagnostics.py  extract_descriptors.py  extract_frames.py  floorplanvis_main.py  floorplanvis_main_v2.py  image.py  image_matching.py  image_multiple_sets.py  localisation.py  main.py  match_image.py  module_matching_local.py  perform_kmeans.py  point_in_polygon.py  preview.py  room_validation.py  routing.py  save_bow_vectors.py  tainining.py  training.py  training_multiple_sets.py  training_sift.py
code/dbow/: dbow_sift.py  orb_descriptor.py
code/dbow_SIFT/: crop_images.py  image_matching.py  training.py
code/old/: image.py  training.py
data/: bkhall_east_floorplan_take2_0.5.csv
data/csvs/: BK_wall_coordinates.csv  image_validation_linkage.csv  manual_validation.csv  room_validation_linkage_single.csv  slam_camera_coordinates.csv  slam_camera_coordinates_merged_v2.csv
data/defisheyed_1/: bow_vectors.npy  image_names.npy  kmeans_model.npy
data/diagnostics/: diagnostics_multi_N=2_cs=1.csv  diagnostics_multi_N=2_cs=2.csv  diagnostics_multi_N=2_cs=3.csv  diagnostics_multi_N=2_cs=4.csv  diagnostics_multi_N=2_cs=5.csv  diagnostics_multi_N=3_cs=1.csv  diagnostics_multi_N=3_cs=2.csv  diagnostics_multi_N=3_cs=3.csv  diagnostics_multi_N=3_cs=4.csv  diagnostics_multi_N=3_cs=5.csv  diagnostics_multi_N=4_cs=1.csv  diagnostics_multi_N=4_cs=2.csv  diagnostics_multi_N=4_cs=3.csv  diagnostics_multi_N=4_cs=4.csv  diagnostics_multi_N=4_cs=5.csv  diagnostics_multi_N=5_cs=1.csv  diagnostics_multi_N=5_cs=2.csv  diagnostics_multi_N=5_cs=3.csv  diagnostics_multi_N=5_cs=4.csv  diagnostics_multi_N=5_cs=5.csv  diagnostics_multi_N=6_cs=1.csv  diagnostics_multi_N=6_cs=2.csv  diagnostics_multi_N=6_cs=3.csv  diagnostics_multi_N=6_cs=4.csv  diagnostics_multi_N=6_cs=5.csv  diagnostics_multi_N=7_cs=1.csv  diagnostics_multi_N=7_cs=2.csv  diagnostics_multi_N=7_cs=3.csv  diagnostics_multi_N=7_cs=4.csv  diagnostics_multi_N=7_cs=5.csv  diagnostics_multi_N=8_cs=1.csv  diagnostics_multi_N=8_cs=2.csv  diagnostics_multi_N=8_cs=3.csv  diagnostics_multi_N=8_cs=4.csv  diagnostics_multi_N=8_cs=5.csv  diagnostics_single_N=1_cs=1.csv
data/floorplans/: BK_floorplan.geojson  BK_floorplan_latlong.geojson  nodes.geojson  nodes_latlong.geojson  nodes_v2.geojson  test_floorplan.geojson  test_floorplan_latlong.geojson
data/room_validation/: BK_rooms.geojson  test_floorplan.geojson  test_floorplan_latlong.geojson
data/routing/: centroid.geojson  nodes.geojson  rooms.geojson  routing.geojson
data/test_geolab/: image_names.npy
data/user_images/: Image_matching_validation_sheet.xlsx
dbow/: CMakeLists.txt
icp/: makefile  pyproject.toml
icp/src/: example.py  icp.py  main.py
image_matching/: extract_frames.py  match_image.py  setup database.py
old_stuff/GEO1101_Synthesis_Project_git/: training.py
old_stuff/old_code/: extract_frames.py  image.py  localisation.py  preview.py
old_stuff/old_code/dbow/: dbow.py  (+1 more)
routing/: boundary.geojson  nodes.geojson
web/: .eslintrc.json  README.md  eslint.config.js  farm.config.ts  index.html  package-lock.json  package.json
web/src/: home.tsx  index.tsx  main.css  main.tsx  provider.tsx  typings.d.ts
(+29 files in other folders)
